[tool.poetry]
name = "loadsmart"
version = "0.1.0"
description = ""
authors = ["Andre Felipe Dias"]

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
yapf = "^0.30.0"
mypy = "^0.790"
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
